--- a/CandyShop/Views/Home/Index.cshtml
+++ b/CandyShop/Views/Home/Index.cshtml
@@ -11,5 +11,7 @@
   </head>
   <body>
     @Html.ActionLink("Register", "Register", "Account")
+    <p style="margin: 0;">or</p>
+    @Html.ActionLink("Login", "Login", "Account")
   </body>
 </html>
