Add full CRUD for Treat

--- a/CandyShop/Views/Home/Index.cshtml
+++ b/CandyShop/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
       {
         @foreach(Treat treat in Model["treats"])
         {
-          <p>@treat.Name</p>
+          <h5><li>@treat.Name</li></h5>
         }
       }
       <h1>Flavors</h1>
