--- a/CandyShop/Views/Treat/Index.cshtml
+++ b/CandyShop/Views/Treat/Index.cshtml
@@ -1,7 +1,9 @@
+@using Candy.Models
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Treat Overview</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
@@ -10,6 +12,41 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    
+    @Html.ActionLink("Home Page", "Index", "Home")
+    <div style="text-align: right; margin-right: 1rem">
+      @if (User.Identity.IsAuthenticated)
+      {
+        <h5>@User.Identity.Name</h5>
+        @using (Html.BeginForm("LogOff", "Account"))
+        {
+          <input type="submit" value="Log Out" />
+        }
+      }
+      else
+      {
+          @Html.ActionLink("Register", "Register", "Account")
+          <p style="margin: 0;">or</p>
+          @Html.ActionLink("Login", "Login", "Account")
+      }
+    </div>
+    <div style="text-align: center">
+      <hr />
+      <h1>Current Treats</h1>
+      @Html.ActionLink("Add a new Treat", "Create")
+      <hr />
+      @if (Model.Count == 0)
+      {
+        <h3>No treats have been added yet!</h3>
+      }
+      else
+      {
+        @foreach (Treat treat in Model)
+        {
+          <div style="text-align: center">
+            <h3 style="background-color: rgb(210, 207, 207); padding: .5rem; margin-bottom: 1rem;">@Html.ActionLink($"{@treat.Name}", "Detail", new { id = treat.TreatId })</h3>
+          </div>
+        }
+      }
+    </div>
   </body>
 </html>
