--- a/CandyShop/Views/Flavor/Index.cshtml
+++ b/CandyShop/Views/Flavor/Index.cshtml
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Flavor Overview</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
@@ -12,6 +12,7 @@
     <meta charset='utf-8'>
   </head>
   <body>
+    @Html.ActionLink("Home Page", "Index", "Home")
     <div style="text-align: right; margin-right: 1rem">
       @if (User.Identity.IsAuthenticated)
       {
@@ -28,31 +29,22 @@
           @Html.ActionLink("Login", "Login", "Account")
       }
     </div>
-    <hr />
-
     <div style="text-align: center">
-      <h1>@Html.ActionLink("Treats", "Index", "Treat")</h1>
-      @if (Model["treats"].Length == 0)
+      <hr />
+      <h1>Current Flavors</h1>
+      @Html.ActionLink("Add a new Flavor", "Create")
+      <hr />
+      @if (Model.Count == 0)
       {
-        <p>No treats have been added yet!</p>
+        <h3>No flavors have been added yet!</h3>
       }
       else
       {
-        @foreach(Treat treat in Model["treats"])
+        @foreach (Flavor flavor in Model)
         {
-          <h5><li>@treat.Name</li></h5>
-        }
-      }
-      <h1>@Html.ActionLink("Flavors", "Index", "Flavor")</h1>
-      @if (Model["flavors"].Length == 0)
-      {
-        <p>No flavors have been added yet!</p>
-      }
-      else
-      {
-        @foreach(Flavor flavor in Model["flavors"])
-        {
-          <h5><li>@flavor.Name</li></h5>
+          <div style="text-align: center">
+            <h3 style="background-color: rgb(210, 207, 207); padding: .5rem; margin-bottom: 1rem;">@Html.ActionLink($"{@flavor.Name}", "Detail", new { id = flavor.FlavorId })</h3>
+          </div>
         }
       }
     </div>
