--- a/CandyShop/Views/Treat/Detail.cshtml
+++ b/CandyShop/Views/Treat/Detail.cshtml
@@ -1,3 +1,5 @@
+@using Candy.Models
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,6 +15,30 @@
     <div style="text-align: center">
       <h1>About @Model.Name</h1>
       <h3>Description: @Model.Description</h3>
+      <h3>Current Flavors:</h3>
+      @if (Model.JoinEntities.Count == 0)
+      {
+        <div style="display: flex; flex-direction: row; align-content: center; justify-content: center">
+          <h5>No current flavors</h5>
+          @using (Html.BeginForm("AddFlavor", "Treat", new { id = $"{@Model.TreatId}" }, FormMethod.Get))
+          {
+            <input type="submit" name="submit" value="Add" style="margin-left: 1rem" />
+          }
+        </div>
+      }
+      else
+      {
+        @foreach(FlavorTreat join in @Model.JoinEntities)
+        {
+          <li style="display: flex; align-items: center; justify-content: center; margin: 0">
+            <h3>@join.Flavor.Name</h3>
+            <form action="/Treat/DeleteFlavor" method="post" style="margin-left: 1rem;">
+              <input name="joinId" type="hidden" value="@join.FlavorTreatId" />
+              <button name="submit" type='submit' >Remove</button>
+            </form>
+          </li>
+        }
+      }
       <p style="margin: 0">@Html.ActionLink($"Edit {@Model.Name}", "Edit", new { treatId = @Model.TreatId })</p>
       <p>@Html.ActionLink("Back", "Index")</p>
     </div>
