--- a/CandyShop/Views/Home/Index.cshtml
+++ b/CandyShop/Views/Home/Index.cshtml
@@ -12,25 +12,49 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    <div style="text-align: right; margin-right: 1rem">
-      @if (User.Identity.IsAuthenticated)
-      {
-        <h5>@User.Identity.Name</h5>
-        @using (Html.BeginForm("LogOff", "Account"))
-        {
-          <input type="submit" value="Log Out" />
-        }
-      }
-      else
-      {
-          @Html.ActionLink("Register", "Register", "Account")
-          <p style="margin: 0;">or</p>
-          @Html.ActionLink("Login", "Login", "Account")
-      }
+    <div class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand">Candy Shop</a>
+        <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Home Page |", "Index", "Home", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink(" Treats |", "Index", "Treat", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Flavors", "Index", "Flavor", null, new { @class = "nav-link" })
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            @if (User.Identity.IsAuthenticated)
+            {
+              <span class="navbar-text">@User.Identity.Name</span>
+              @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+              {
+                <button type="submit" class="btn btn-link text-white">Log Out</button>
+              }
+            }
+            else
+            {
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link" })
+                </li>
+                <li class="nav-item">
+                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "nav-link" })
+                </li>
+              </ul>
+            }
+          </li>
+        </ul>
+      </div>
     </div>
-    <hr />
 
-    <div style="text-align: center">
+    <div style="text-align: center; background-color: #87CEEB; height: 90vh;">
       <h1>@Html.ActionLink("Treats", "Index", "Treat")</h1>
       @if (Model["treats"].Length == 0)
       {
