--- a/CandyShop/Views/Treat/Index.cshtml
+++ b/CandyShop/Views/Treat/Index.cshtml
@@ -12,31 +12,53 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    @Html.ActionLink("Home Page", "Index", "Home")
-    <div style="text-align: right; margin-right: 1rem">
-      @if (User.Identity.IsAuthenticated)
-      {
-        <h5>@User.Identity.Name</h5>
-        @using (Html.BeginForm("LogOff", "Account"))
-        {
-          <input type="submit" value="Log Out" />
-        }
-      }
-      else
-      {
-          @Html.ActionLink("Register", "Register", "Account")
-          <p style="margin: 0;">or</p>
-          @Html.ActionLink("Login", "Login", "Account")
-      }
+    <div class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand">Treats</a>
+        <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Home Page |", "Index", "Home", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink(" Treats |", "Index", "Treat", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Flavors", "Index", "Flavor", null, new { @class = "nav-link" })
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            @if (User.Identity.IsAuthenticated)
+            {
+              <span class="navbar-text">@User.Identity.Name</span>
+              @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+              {
+                <button type="submit" class="btn btn-link text-white">Log Out</button>
+              }
+            }
+            else
+            {
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link" })
+                </li>
+                <li class="nav-item">
+                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "nav-link" })
+                </li>
+              </ul>
+            }
+          </li>
+        </ul>
+      </div>
     </div>
-    <div style="text-align: center">
-      <hr />
-      <h1>Current Treats</h1>
-      @Html.ActionLink("Add a new Treat", "Create")
-      <hr />
+
+    <div style="text-align: center; background-color: #b1b1fc; height: 90vh;">
       @if (Model.Count == 0)
       {
         <h3>No treats have been added yet!</h3>
+        @Html.ActionLink("Add a new Treat", "Create")
       }
       else
       {
