--- a/CandyShop/Views/Flavor/Index.cshtml
+++ b/CandyShop/Views/Flavor/Index.cshtml
@@ -9,12 +9,23 @@
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta charset='utf-8'>
   </head>
   <body>
     <div class="navbar navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand">Flavors</a>
+        <div class="navbar-brand" style="display: flex; flex-direction: row">Flavors
+          @if (User.Identity.IsAuthenticated)
+          {
+            @using (Html.BeginForm("Create", "Flavor", FormMethod.Get))
+            {
+              <input type="submit" value="Add New" style="padding: 4px; font-size: small; margin-left: 10px; background-color: grey; color: red"/>
+            }
+          }
+        </div>
         <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
           <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
             @Html.ActionLink("Home Page |", "Index", "Home", null, new { @class = "nav-link" })
@@ -32,31 +43,32 @@
           <li class="nav-item">
             @if (User.Identity.IsAuthenticated)
             {
-              <span class="navbar-text">@User.Identity.Name</span>
-              @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
-              {
-                <button type="submit" class="btn btn-link text-white">Log Out</button>
-              }
+              <div style="display: flex; flex-direction: row">
+                <span class="navbar-text">@User.Identity.Name</span>
+                @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+                {
+                  <button type="submit" class="btn btn-link text-white">Log Out</button>
+                }
+              </div>
             }
             else
             {
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item">
-                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "nav-link" })
-                </li>
-              </ul>
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Account
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="position: absolute; background-color: grey; ">
+                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "dropdown-item" })
+                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "dropdown-item" })
+                </div>
+              </div>
             }
           </li>
         </ul>
       </div>
     </div>
 
-    <div style="text-align: center; background-color: #fe5b6e; height: 90vh;">
-      @Html.ActionLink("Add a new Flavor", "Create")
-      <hr />
+    <div style="text-align: center; background-color: #fe5b6e; height: 94.2vh;">
       @if (Model.Count == 0)
       {
         <h3>No flavors have been added yet!</h3>
