--- a/CandyShop/Views/Home/Index.cshtml
+++ b/CandyShop/Views/Home/Index.cshtml
@@ -3,12 +3,15 @@
 <!DOCTYPE html>
 <html style="margin: none; padding: none">
   <head>
-    <title></title>
+    <title>Candy Shop</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <meta charset='utf-8'>
   </head>
   <body>
@@ -32,29 +35,31 @@
           <li class="nav-item">
             @if (User.Identity.IsAuthenticated)
             {
-              <span class="navbar-text">@User.Identity.Name</span>
-              @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
-              {
-                <button type="submit" class="btn btn-link text-white">Log Out</button>
-              }
+              <div style="display: flex; flex-direction: row">
+                <span class="navbar-text">@User.Identity.Name</span>
+                @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+                {
+                  <button type="submit" class="btn btn-link text-white">Log Out</button>
+                }
+              </div>
             }
             else
             {
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item">
-                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "nav-link" })
-                </li>
-              </ul>
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Account
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="position: absolute; background-color: grey; ">
+                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "dropdown-item" })
+                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "dropdown-item" })
+                </div>
+              </div>
             }
           </li>
         </ul>
       </div>
     </div>
-    <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; background-color: #87CEEB; height: 91.9vh;">
-      @* <h1>@Html.ActionLink("Treats", "Index", "Treat")</h1> *@
+    <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; background-color: #87CEEB; height: 94.2vh;">
       <h1 style="color: rgb(118, 117, 117)">Treats</h1>
       @if (Model["treats"].Length == 0)
       {
@@ -77,7 +82,6 @@
           </div>
         </div>
       }
-      @* <h1>@Html.ActionLink("Flavors", "Index", "Flavor")</h1> *@
       <h1 style="color: rgb(118, 117, 117)">Flavors</h1>
       @if (Model["flavors"].Length == 0)
       {
@@ -91,7 +95,7 @@
             {
               <div class="col-md-2 mb-4">
                 <div class="card" style="background-color: #87CEEB; border: none">
-                  <div class="card-body" style="background-color: #fe5b6e; border: 4px solid red; color: rgb(0, 255, 251); border-radius: 25px;">
+                  <div class="card-body" style="background-color: #fe5b6e; border: 4px solid red; color: white; border-radius: 25px;">
                     <h4 class="card-title">@flavor.Name</h4>
                   </div>
                 </div>
