--- a/CandyShop/Views/Account/Login.cshtml
+++ b/CandyShop/Views/Account/Login.cshtml
@@ -4,38 +4,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Login</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
     <meta charset='utf-8'>
+    <link href="~/css/AccountLogin.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h2>Sign in</h2>
-    <p>using your Candy account</p> 
-    <hr />
 
-    @if(!ViewData.ModelState.IsValid) 
-    {
-      <div style="color: red;">
-        @Html.ValidationSummary() 
+    <div class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand">Candy Shop Login</a>
+        <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Home Page |", "Index", "Home", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink(" Treats |", "Index", "Treat", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Flavors", "Index", "Flavor", null, new { @class = "nav-link" })
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            @if (User.Identity.IsAuthenticated)
+            {
+              <span class="navbar-text">@User.Identity.Name</span>
+              @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+              {
+                <button type="submit" class="btn btn-link text-white">Log Out</button>
+              }
+            }
+            else
+            {
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "nav-link" })
+                </li>
+              </ul>
+            }
+          </li>
+        </ul>
       </div>
-    }
+    </div>
 
-    @using (Html.BeginForm())
-    {
-      @Html.LabelFor(m => m.Email)
-      @Html.TextBoxFor(m => m.Email)
+    <div class="main-body">
+      <div class="form-background">
+        <h2>Sign in</h2>
+        <p>using your Candy account</p> 
+        @if(!ViewData.ModelState.IsValid) 
+        {
+          <div style="color: red;">
+            @Html.ValidationSummary() 
+          </div>
+        }
 
-      @Html.LabelFor(m => m.Password)
-      @Html.EditorFor(m => m.Password)
+        @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+        {
+          <input type="email" name="Email" placeholder="Email" />
+          <input type="password" name="Password" placeholder="Password" required>
 
-      <input type="submit" value="Log in" />
-    }
-
-    <p>@Html.ActionLink("Create an account", "Register")</p>
-    <p>@Html.ActionLink("Back to main page", "Index", "Home")</p>
+          <button type="submit" class="btn btn-primary">Log in</button>
+        }
+        <p>@Html.ActionLink("Create an account", "Register")</p>
+      </div>
+    </div>
   </body>
 </html>
