--- a/CandyShop/Views/Account/Register.cshtml
+++ b/CandyShop/Views/Account/Register.cshtml
@@ -4,39 +4,75 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Register</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
     <meta charset='utf-8'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-EXAMPLE_SHA_HASH" crossorigin="anonymous" />
+    <link href="~/css/AccountRegister.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h2>Create a Candy account</h2>
-    <hr />
-
-    @if(!ViewData.ModelState.IsValid) 
-    {
-      <div style="color: red;">
-        @Html.ValidationSummary() 
+    <div class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand">Candy Shop Register</a>
+        <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Home Page |", "Index", "Home", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink(" Treats |", "Index", "Treat", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Flavors", "Index", "Flavor", null, new { @class = "nav-link" })
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            @if (User.Identity.IsAuthenticated)
+            {
+              <span class="navbar-text">@User.Identity.Name</span>
+              @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+              {
+                <button type="submit" class="btn btn-link text-white">Log Out</button>
+              }
+            }
+            else
+            {
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "nav-link" })
+                </li>
+              </ul>
+            }
+          </li>
+        </ul>
       </div>
-    }
+    </div>
+    <div class="main-body">
+      <div class="form-background">
+        <h2>Create a Candy account</h2>
+        @if(!ViewData.ModelState.IsValid) 
+        {
+          <div style="color: red;">
+            @Html.ValidationSummary() 
+          </div>
+        }
 
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post))
-    {
-      @Html.LabelFor(user => user.Email)
-      @Html.TextBoxFor(user => user.Email)
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+        {
+          <input type="email" name="Email" placeholder="Email" />
+          <input type="password" name="Password" placeholder="Password" required>
+          <input type="password" name="ConfirmPassword" placeholder="Confirm Password" required>
 
-      @Html.LabelFor(user => user.Password)
-      @Html.EditorFor(user => user.Password)
-
-      @Html.LabelFor(user => user.ConfirmPassword)
-      @Html.EditorFor(user => user.ConfirmPassword)
-
-      <input type="submit" value="Register" />
-    }
-    <p>Already have an account? @Html.ActionLink("Sign in", "Login")</p>
-    <p>@Html.ActionLink("Back to main page", "Index", "Home")</p>
+          <button type="submit" class="btn btn-primary">Register</button>
+        }
+        <p>Already have an account? @Html.ActionLink("Sign in", "Login")</p>
+      </div>
+    </div>
   </body>
 </html>
