--- a/CandyShop/Views/Flavor/Edit.cshtml
+++ b/CandyShop/Views/Flavor/Edit.cshtml
@@ -1,9 +1,10 @@
 @model Candy.Models.Flavor
+@using Candy.Models
 
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit @Model.Name</title>
+    <title>Edit @ViewBag.Name</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
@@ -13,7 +14,7 @@
   </head>
   <body>
     <div style="text-align: center">
-      <h1>Edit flavor: @Model.Name</h1>
+      <h1>Edit flavor: @ViewBag.Name</h1>
       @using (Html.BeginForm())
       {
         @Html.HiddenFor(model => model.FlavorId)
@@ -23,16 +24,20 @@
         <h3>Description</h3>
         @Html.EditorFor(model => model.Description)
         <br />
-        <p style="margin: 0">@Html.ActionLink("Add Treat", "AddTreat", new { id = $"{@Model.FlavorId}"})</p>
         <input name="submit" type="submit" value="Save" id="submit" />
       }
-      @using (Html.BeginForm("Delete", "Flavor", FormMethod.Post))
-      {
-        <input type="hidden" value="@Model.FlavorId" name="flavorId"/>
-        <input name="submit" type="submit" value="Delete" />
-      }
 
-      @Html.ActionLink("Go back to Flavors", "Index")
+        <h1>Remove Treats</h1>
+        @foreach(FlavorTreat join in @Model.JoinEntities)
+        {
+          <li style="display: flex; align-items: center; justify-content: center; margin: 0">
+            <h3>@join.Treat.Name</h3>
+            <form action="/Flavor/DeleteTreat" method="post" style="margin-left: 1rem;">
+              <input name="joinId" type="hidden" value="@join.FlavorTreatId" />
+              <button name="submit" type='submit' >Remove</button>
+            </form>
+          </li>
+        }
     </div>
   </body>
 </html>
