Update heading name

--- a/CandyShop/Views/Flavor/AddTreat.cshtml
+++ b/CandyShop/Views/Flavor/AddTreat.cshtml
@@ -11,7 +11,7 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    <h1>Add a new treat</h1>
+    <h1>Add a new @Model.Name treat</h1>
 
     @using (Html.BeginForm())
     {
