--- a/CandyShop/Views/Treat/AddFlavor.cshtml
+++ b/CandyShop/Views/Treat/AddFlavor.cshtml
@@ -11,7 +11,7 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    <h1>Add a new flavor</h1>
+    <h1>Add a new flavor to @Model.Name</h1>
 
     @using (Html.BeginForm())
     {
