--- a/CandyShop/Views/Flavor/Edit.cshtml
+++ b/CandyShop/Views/Flavor/Edit.cshtml
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit @ViewBag.Name</title>
+    <title>Edit @Model.Name</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
@@ -12,9 +12,55 @@
       crossorigin="anonymous">
     <meta charset='utf-8'>
   </head>
-  <body>
-    <div style="text-align: center">
-      <h1>Edit flavor: @ViewBag.Name</h1>
+  <body style="background-color: rgb(75, 75, 255); color: white">
+    <div class="navbar navbar-dark bg-dark">
+      <div class="container">
+        <div class="navbar-brand" style="display: flex; flex-direction: row">
+          Edit @Model.Name
+        </div>
+        <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Home Page |", "Index", "Home", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink(" Treats |", "Index", "Treat", null, new { @class = "nav-link" })
+            &nbsp;
+          </li>
+          <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
+            @Html.ActionLink("Flavors", "Index", "Flavor", null, new { @class = "nav-link" })
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            @if (User.Identity.IsAuthenticated)
+            {
+              <div style="display: flex; flex-direction: row">
+                <span class="navbar-text">@User.Identity.Name</span>
+                @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { @class = "form-inline" }))
+                {
+                  <button type="submit" class="btn btn-link text-white">Log Out</button>
+                }
+              </div>
+            }
+            else
+            {
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Account
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="position: absolute; background-color: grey; ">
+                  @Html.ActionLink("Register", "Register", "Account", null, new { @class = "dropdown-item" })
+                  @Html.ActionLink("Login", "Login", "Account", null, new { @class = "dropdown-item" })
+                </div>
+              </div>
+            }
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div style="text-align: center; height: 90vh; display: flex; flex-direction: column; align-content: center; justify-content: center">
       @using (Html.BeginForm())
       {
         @Html.HiddenFor(model => model.FlavorId)
@@ -24,20 +70,20 @@
         <h3>Description</h3>
         @Html.EditorFor(model => model.Description)
         <br />
-        <input name="submit" type="submit" value="Save" id="submit" />
+        <input class="btn btn-success" name="submit" type="submit" value="Save" id="submit" />
       }
-
-        <h1>Remove Treats</h1>
-        @foreach(FlavorTreat join in @Model.JoinEntities)
-        {
-          <li style="display: flex; align-items: center; justify-content: center; margin: 0">
-            <h3>@join.Treat.Name</h3>
-            <form action="/Flavor/DeleteTreat" method="post" style="margin-left: 1rem;">
-              <input name="joinId" type="hidden" value="@join.FlavorTreatId" />
-              <button name="submit" type='submit' >Remove</button>
-            </form>
-          </li>
-        }
+      <hr />
+      <h1>Remove Treats</h1>
+      @foreach(FlavorTreat join in @Model.JoinEntities)
+      {
+        <li style="display: flex; align-items: center; justify-content: center; margin: 0">
+          <h3>@join.Treat.Name</h3>
+          <form action="/Flavor/DeleteTreat" method="post" style="margin-left: 1rem;">
+            <input name="joinId" type="hidden" value="@join.FlavorTreatId" />
+            <button class="btn btn-danger" name="submit" type='submit'>Remove</button>
+          </form>
+        </li>
+      }
     </div>
   </body>
 </html>
