--- a/CandyShop/Views/Treat/Edit.cshtml
+++ b/CandyShop/Views/Treat/Edit.cshtml
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Edit @ViewBag.Name</title>
+    <title>Edit @Model.Name</title>
     <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
@@ -12,11 +12,11 @@
       crossorigin="anonymous">
     <meta charset='utf-8'>
   </head>
-  <body>
+  <body style="background-color: rgb(75, 75, 255); color: white">
     <div class="navbar navbar-dark bg-dark">
       <div class="container">
         <div class="navbar-brand" style="display: flex; flex-direction: row">
-          Edit @ViewBag.Name
+          Edit @Model.Name
         </div>
         <ul class="navbar-nav mr-auto" style="display: flex; flex-direction: row">
           <li class="nav-item" style="display: flex; align-items: center; justify-content: center">
@@ -60,8 +60,7 @@
       </div>
     </div>
 
-    <div style="text-align: center">
-      <h1>Edit @ViewBag.Name</h1>
+    <div style="text-align: center; height: 90vh; display: flex; flex-direction: column; align-content: center; justify-content: center">
       @using (Html.BeginForm())
       {
         @Html.HiddenFor(model => model.TreatId)
@@ -71,9 +70,9 @@
         <h3>Description</h3>
         @Html.EditorFor(model => model.Description)
         <br />
-        <input name="submit" type="submit" value="Save" id="submit" />
+        <input class="btn btn-success" name="submit" type="submit" value="Save" id="submit" />
       }
-
+      <hr />
       <h1>Remove Flavors</h1>
       @foreach(FlavorTreat join in @Model.JoinEntities)
       {
@@ -81,7 +80,7 @@
           <h3>@join.Flavor.Name</h3>
           <form action="/Treat/DeleteFlavor" method="post" style="margin-left: 1rem;">
             <input name="joinId" type="hidden" value="@join.FlavorTreatId" />
-            <button name="submit" type='submit'>Remove</button>
+            <button class="btn btn-danger" name="submit" type='submit'>Remove</button>
           </form>
         </li>
       }
