--- a/CandyShop/Views/Treat/Edit.cshtml
+++ b/CandyShop/Views/Treat/Edit.cshtml
@@ -70,7 +70,7 @@
         <h3>Description</h3>
         @Html.EditorFor(model => model.Description)
         <br />
-        <input class="btn btn-success" name="submit" type="submit" value="Save" id="submit" />
+        <input class="btn btn-success" name="submit" type="submit" value="Save" id="submit" style="margin: 1rem" />
       }
       <hr />
       <h1>Remove Flavors</h1>
